[package]
name = "uniqr"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", optional = true }
clap = { version = "4.5.53", features = ["derive"] }
sled = { version = "0.34.7", optional = true }

[features]
default = ["fast-hash"]
fast-hash = ["dep:ahash"]
disk-backed = ["dep:sled"]

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
